# shared-intelligence

./: .gitignore  README.md  pyproject.toml
tests/: test_identity_kernel.py  test_intent_graph.py  test_memory.py  test_narrative_engine.py  test_persistence_layer.py  test_runtime.py  test_simulation_verifier.py  test_symbiosis_model.py
victor/: __init__.py  runtime.py
victor/identity/: __init__.py  kernel.py
victor/intent/: __init__.py  graph.py
victor/memory/: __init__.py  constitutive.py  episodic.py  narrative.py
victor/narrative/: __init__.py  engine.py
victor/persistence/: __init__.py  layer.py
victor/simulation/: __init__.py  verifier.py
victor/symbiosis/: __init__.py  model.py
