[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "victor"
version = "0.1.0"
description = "Legacy-Symbiotic Cognitive Runtime — a persistent, identity-stable, co-adaptive intelligence system"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["ai", "cognitive-runtime", "legacy-intelligence", "symbiotic-ai"]

[tool.setuptools.packages.find]
where = ["."]
include = ["victor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
